kubernetes/backend-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deploy
  labels:
    app: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
      - name: flask-azure
        #image: nrregistry.azurecr.io/server:2.1
        image: nrregistry.azurecr.io/flask-back-end-test
        #tty: true
        #stdin: true
        #se non ci metto un comando tipo questo non crea il container (va tipo in loop)
        #command: ["/bin/sleep", "3650d"]
        #ports:
        #- containerPort: 8011
