kubernetes/reddit-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-deploy
  labels:
    app: reddit-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit-test
  template:
    metadata:
      labels:
        app: reddit-test
    spec:
      containers:
      - name: reddit-azure
        #image: nrregistry.azurecr.io/server:2.1
        image: nrregistry.azurecr.io/reddit-test
        #tty: true
        #stdin: true
        #se non ci metto un comando tipo questo non crea il container (va tipo in loop)
        #command: ["/bin/sleep", "3650d"]
        ports:
        - containerPort: 8011
      #imagePullSecrets:
