kubernetes/scrapers-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-deploy
  labels:
    app: scraper-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-test
  template:
    metadata:
      labels:
        app: scraper-test
    spec:
      containers:
      - name: scraper-azure
        #image: nrregistry.azurecr.io/client-test:2.3
        image: nrregistry.azurecr.io/scrapers-test
        tty: true
        stdin: true
        #se non ci metto un comando tipo questo non crea il container (va tipo in loop)
        #command: ["/bin/sleep", "3650d"]
