kubernetes/flask-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-backend
  ports:
  - port: 5000
    targetPort: 5000
