kubernetes/flask-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-load-balancer
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-backend
  type: LoadBalancer
