kubernetes/react-balancer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deploy
  labels:
    app: react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react-azure
        #image: nrregistry.azurecr.io/react-image-test
        image: nrregistry.azurecr.io/react-nginx
        ports:
        #- containerPort: 3000
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: react-load-balancer
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  selector:
    app: react
  type: LoadBalancer

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: server-test-svc
#  labels:
#    run: server-test-svc
#spec:
#  ports:
#  - port: 8011
#    protocol: UDP
#  selector:
#    app: server-test
