kubernetes/server-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-loadbalancer
spec:
  selector:
    app: server-test
  ports:
    - port: 82
      protocol: UDP
      targetPort: 8011
  type: LoadBalancer
